--- a/contact.html
+++ b/contact.html
@@ -659,7 +659,9 @@ padding-bottom: 0px;
 ">
                                             <div class="rich-text js-text-editable module-text">
                                                 <div style="text-align:center;"><br><br><br><span style="font-family:gmsj; font-style:normal; font-weight:300;"></span><span style="font-family:gmsj; font-style:normal; font-weight:900;"><span style="font-size:60px;"><span style="color:#eeeeee; font-family:gmsj; font-style:normal; font-weight:700;">联系方式<br><br></span></span>
-                                                    </span>6年的动画行业工作经验,<br>喜欢动态设计和动画制作.<br><br>热爱艺术创作,<br>我选择把它作为我的职业。<br>无论是制作一条企业的宣传视频，还是在生活中创作，我总是需要创造美丽的东西<br>这对你来说是个好消息。<br><br>写信给我讨论我们可以一起完成的项目.<br>如果你有什么想法，我会去做的，我会做得很好。<br><span style="font-family:gmsj; font-style:normal; font-weight:900;"><span style="font-size:60px;"><span style="color:#eeeeee; font-family:gmsj; font-style:normal; font-weight:700;"><br></span></span>
+                                                    </span>6年的动画行业工作经验,<br>喜欢动态设计和动画制作.<br><br>热爱艺术创作,<br>无论是制作一条企业的宣传视频，<br>
+                                                    还是在生活中练习创作，我总是需要创造美丽的东西<br>
+                                                    这对你来说是个好消息。<br><br>写信给我讨论我们可以一起完成的项目.<br>如果你有什么想法，我会去做的，我会做得很好。<br><span style="font-family:gmsj; font-style:normal; font-weight:900;"><span style="font-size:60px;"><span style="color:#eeeeee; font-family:gmsj; font-style:normal; font-weight:700;"><br></span></span>
                                                     </span><span style="font-family:gmsj; font-style:normal; font-weight:700;"></span><br></div>
                                             </div>
                                         </div>
