--- a/czzpj.html
+++ b/czzpj.html
@@ -563,18 +563,21 @@
         }, {}, ["loader"]);
     </script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="keywords" content="Design graphique,illustration,art,murale,WN ART &amp; DESIGN,WNARTDESIGN.COM" />
-    <meta name="description" content="Illustration x Design graphique" />
+    <meta name="keywords" content="branding,handlebars,motorcycle,motorcycle parts" />
+    <meta name="description" content="Nouvelle identité visuelle pour Précision MV qui devient Ironhold. Un atelier de fabrication de guidons et pièces de moto. Dénomination, conception de l'image de marque, site web, photos, vidéos et coordination du projet. "
+    />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@AdobePortfolio" />
-    <meta property="og:title" content="橙子动漫 - 关于" />
-    <meta property="og:description" content="Illustration x Design graphique" />
+    <meta property="og:title" content="WN ART &amp; DESIGN - IRØNHØLD - BRANDING" />
+    <meta property="og:description" content="Nouvelle identité visuelle pour Précision MV qui devient Ironhold. Un atelier de fabrication de guidons et pièces de moto. Dénomination, conception de l'image de marque, site web, photos, vidéos et coordination du projet. "
+    />
+    <meta property="og:image" content="https://cdn.myportfolio.com/dd382a0eb5937ce9a2eec27e77e54307/489e1d2d-6451-4f27-bcc9-c9dc67db36ab_car_202x158.jpg?h=10376a21a6297875c27828548ebcfe2a" />
     <link rel="icon" href="https://cdn.myportfolio.com/dd382a0eb5937ce9a2eec27e77e54307/444d2d94-6a9b-4418-b53f-536c92b5cdae_carw_1x1x32.png?h=7c0f715d771cab3c585146fdbdc8c942" />
     <link rel="apple-touch-icon" href="https://cdn.myportfolio.com/dd382a0eb5937ce9a2eec27e77e54307/699fe73e-62ac-41df-a697-62a6ceb15b76_carw_1x1x180.png?h=de4622e431b2c1c81d53eb709134813d" />
     <link rel="stylesheet" href="/dist/css/main.css" type="text/css" />
-    <link rel="stylesheet" href="https://cdn.myportfolio.com/dd382a0eb5937ce9a2eec27e77e54307/c23cf19ba67f48f6c842860b2a390f561651100219.css?h=a4d308611f8a4cb6011182ce9b408fdc" type="text/css" />
-    <link rel="canonical" href="https://wnartdesign.com/services" />
-    <title>W橙子动漫 - 关于</title>
+    <link rel="stylesheet" href="https://cdn.myportfolio.com/dd382a0eb5937ce9a2eec27e77e54307/717829a48b5fad64747b7bf2f577ae731651100219.css?h=10dc8ebc953bcca66f4d94461b39da64" type="text/css" />
+    <link rel="canonical" href="https://wnartdesign.com/ironhold-branding" />
+    <title>橙子动漫 - 橙子作品集</title>
     <script type="text/javascript" src="//use.typekit.net/ik/2hyP9_jYVTxEKrRyOSCebwd1Yb6uql52SoR3-6R7Fj9fenCffHYEBsJzwD9oFDIDWDqUjDFcFRbDFh9UZAFcFRBRZRgRwcwuwesRZ2IoZ2mKw2MtwcJtwcJ-RbI7OcuoSeNkieZzde8zOcFzdP37O1gkdDJlic88ikolpWgzS1scdhUTdkoRdhXCHKoadcBkies8Sh81dKoRdhXCdW83da4XZcNC-Av0jhNlOYgkdDJlic88ikolpWgzS1scdhUTdkoRdhXCihoyS1sqZWFTZht0jhNlOYiaikoadcBkies8Sh81dKoRdhXKgeilShGKgYZRShX7fbRaPyMMeMI6MKG4fFJuIMMjMkMfH6qJDR9bMg6IJMJ7fbRbFsMMeMj6MKG4fFIVIMMjgkMfH6qJu29bMg64JMJ7fbKzMsMgeMb6MKG4fHXgIMIjgKMfH6qJK3IbMs6YJMHbMp0sotCe.js?cb=3542f9ec304c2dc19fc7fd80dd515314aade8328"
         async onload="
     try {
@@ -595,14 +598,47 @@
             </div>
             <div class="nav-container">
                 <nav data-hover-hint="nav">
-                    <div class="gallery-title"><a href="/index">主页</a></div>
+                    <div class="gallery-title"><a href="/portfolio">Portfolio</a></div>
                     <div class="page-title">
-                        <a href="/services" class="about">关于</a>
+                        <a href="/services">Services</a>
                     </div>
                     <div class="page-title">
-                        <a href="/contact">联系</a>
+                        <a href="/contact">Contact</a>
                     </div>
-                    <div class="social pf-nav-social" data-hover-hint="navSocialIcons"> </div>
+                    <div class="social pf-nav-social" data-hover-hint="navSocialIcons">
+                        <ul>
+                            <li>
+                                <a href="https://www.behance.net/migxwn" target="_blank">
+                              <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 24" class="icon"><path id="path-1" d="M18.83,14.38a2.78,2.78,0,0,0,.65,1.9,2.31,2.31,0,0,0,1.7.59,2.31,2.31,0,0,0,1.38-.41,1.79,1.79,0,0,0,.71-0.87h2.31a4.48,4.48,0,0,1-1.71,2.53,5,5,0,0,1-2.78.76,5.53,5.53,0,0,1-2-.37,4.34,4.34,0,0,1-1.55-1,4.77,4.77,0,0,1-1-1.63,6.29,6.29,0,0,1,0-4.13,4.83,4.83,0,0,1,1-1.64A4.64,4.64,0,0,1,19.09,9a4.86,4.86,0,0,1,2-.4A4.5,4.5,0,0,1,23.21,9a4.36,4.36,0,0,1,1.5,1.3,5.39,5.39,0,0,1,.84,1.86,7,7,0,0,1,.18,2.18h-6.9Zm3.67-3.24A1.94,1.94,0,0,0,21,10.6a2.26,2.26,0,0,0-1,.22,2,2,0,0,0-.66.54,1.94,1.94,0,0,0-.35.69,3.47,3.47,0,0,0-.12.65h4.29A2.75,2.75,0,0,0,22.5,11.14ZM18.29,6h5.36V7.35H18.29V6ZM13.89,17.7a4.4,4.4,0,0,1-1.51.7,6.44,6.44,0,0,1-1.73.22H4.24V5.12h6.24a7.7,7.7,0,0,1,1.73.17,3.67,3.67,0,0,1,1.33.56,2.6,2.6,0,0,1,.86,1,3.74,3.74,0,0,1,.3,1.58,3,3,0,0,1-.46,1.7,3.33,3.33,0,0,1-1.35,1.12,3.19,3.19,0,0,1,1.82,1.26,3.79,3.79,0,0,1,.59,2.17,3.79,3.79,0,0,1-.39,1.77A3.24,3.24,0,0,1,13.89,17.7ZM11.72,8.19a1.25,1.25,0,0,0-.45-0.47,1.88,1.88,0,0,0-.64-0.24,5.5,5.5,0,0,0-.76-0.05H7.16v3.16h3a2,2,0,0,0,1.28-.38A1.43,1.43,0,0,0,11.89,9,1.73,1.73,0,0,0,11.72,8.19ZM11.84,13a2.39,2.39,0,0,0-1.52-.45H7.16v3.73h3.11a3.61,3.61,0,0,0,.82-0.09A2,2,0,0,0,11.77,16a1.39,1.39,0,0,0,.47-0.54,1.85,1.85,0,0,0,.17-0.88A1.77,1.77,0,0,0,11.84,13Z"/></svg>
+                            </a>
+                            </li>
+                            <li>
+                                <a href="https://www.facebook.com/migxwn/?fref=ts" target="_blank">
+                              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 30 24" xml:space="preserve" class="icon"><path d="M16.21 20h-3.26v-8h-1.63V9.24h1.63V7.59c0-2.25 0.92-3.59 3.53-3.59h2.17v2.76H17.3 c-1.02 0-1.08 0.39-1.08 1.11l0 1.38h2.46L18.38 12h-2.17V20z"/></svg>
+                            </a>
+                            </li>
+                            <li>
+                                <a href="https://www.instagram.com/wnartdesign/" target="_blank">
+                              <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 30 24" style="enable-background:new 0 0 30 24;" xml:space="preserve" class="icon">
+                              <g>
+                                <path d="M15,5.4c2.1,0,2.4,0,3.2,0c0.8,0,1.2,0.2,1.5,0.3c0.4,0.1,0.6,0.3,0.9,0.6c0.3,0.3,0.5,0.5,0.6,0.9
+                                  c0.1,0.3,0.2,0.7,0.3,1.5c0,0.8,0,1.1,0,3.2s0,2.4,0,3.2c0,0.8-0.2,1.2-0.3,1.5c-0.1,0.4-0.3,0.6-0.6,0.9c-0.3,0.3-0.5,0.5-0.9,0.6
+                                  c-0.3,0.1-0.7,0.2-1.5,0.3c-0.8,0-1.1,0-3.2,0s-2.4,0-3.2,0c-0.8,0-1.2-0.2-1.5-0.3c-0.4-0.1-0.6-0.3-0.9-0.6
+                                  c-0.3-0.3-0.5-0.5-0.6-0.9c-0.1-0.3-0.2-0.7-0.3-1.5c0-0.8,0-1.1,0-3.2s0-2.4,0-3.2c0-0.8,0.2-1.2,0.3-1.5c0.1-0.4,0.3-0.6,0.6-0.9
+                                  c0.3-0.3,0.5-0.5,0.9-0.6c0.3-0.1,0.7-0.2,1.5-0.3C12.6,5.4,12.9,5.4,15,5.4 M15,4c-2.2,0-2.4,0-3.3,0c-0.9,0-1.4,0.2-1.9,0.4
+                                  c-0.5,0.2-1,0.5-1.4,0.9C7.9,5.8,7.6,6.2,7.4,6.8C7.2,7.3,7.1,7.9,7,8.7C7,9.6,7,9.8,7,12s0,2.4,0,3.3c0,0.9,0.2,1.4,0.4,1.9
+                                  c0.2,0.5,0.5,1,0.9,1.4c0.4,0.4,0.9,0.7,1.4,0.9c0.5,0.2,1.1,0.3,1.9,0.4c0.9,0,1.1,0,3.3,0s2.4,0,3.3,0c0.9,0,1.4-0.2,1.9-0.4
+                                  c0.5-0.2,1-0.5,1.4-0.9c0.4-0.4,0.7-0.9,0.9-1.4c0.2-0.5,0.3-1.1,0.4-1.9c0-0.9,0-1.1,0-3.3s0-2.4,0-3.3c0-0.9-0.2-1.4-0.4-1.9
+                                  c-0.2-0.5-0.5-1-0.9-1.4c-0.4-0.4-0.9-0.7-1.4-0.9c-0.5-0.2-1.1-0.3-1.9-0.4C17.4,4,17.2,4,15,4L15,4L15,4z"/>
+                                <path d="M15,7.9c-2.3,0-4.1,1.8-4.1,4.1s1.8,4.1,4.1,4.1s4.1-1.8,4.1-4.1S17.3,7.9,15,7.9L15,7.9z M15,14.7c-1.5,0-2.7-1.2-2.7-2.7
+                                  c0-1.5,1.2-2.7,2.7-2.7s2.7,1.2,2.7,2.7C17.7,13.5,16.5,14.7,15,14.7L15,14.7z"/>
+                                <path d="M20.2,7.7c0,0.5-0.4,1-1,1s-1-0.4-1-1s0.4-1,1-1S20.2,7.2,20.2,7.7L20.2,7.7z"/>
+                              </g>
+                              </svg>
+                            </a>
+                            </li>
+                        </ul>
+                    </div>
                 </nav>
             </div>
         </div>
@@ -614,8 +650,8 @@
                     <div class="logo-container">
                         <div class="logo-wrap" data-hover-hint="logo">
                             <div class="logo e2e-site-logo-text logo-image  ">
-                                <a href="https://czdm.github.io/"><img src="img/99bc74d5-073d-4d9c-8cd5-e227ad65707c_rwc_0x0x520x158x4096.png" class="logoimg" alt="橙子动漫"></a>
-                            </div>
+                                 
+			                 <a href="https://czdm.github.io/"><img src="img/99bc74d5-073d-4d9c-8cd5-e227ad65707c_rwc_0x0x520x158x4096.png" class="logoimg" alt="橙子动漫"></a></div>
                         </div>
                         <div class="hamburger-click-area js-hamburger">
                             <div class="hamburger">
@@ -628,7 +664,7 @@
                     <div class="nav-container">
                         <nav data-hover-hint="nav">
 							
-                            <div class="gallery-title"><a href="/portfolio" class="index">主页</a></div>
+                            <div class="gallery-title"><a href="/portfolio" class="active">主页</a></div>
                             <div class="page-title">
                                 <a href="/about">关于</a>
                             </div>
@@ -638,41 +674,42 @@
 </nav>
                     </div>
                 </header>
-                <main>
+              <main>
                     <div class="page-container" data-context="page.page.container" data-hover-hint="pageContainer">
                         <section class="page standard-modules">
-                            <div class="page-content js-page-content" data-context="pages" data-identity="id:p5721150b04009a35a2b24ab65a84db547b67d79cfe8d8736dd1f6">
+                            <header class="page-header content" data-context="pages" data-identity="id:p6179c83bf0ab6d947b395ac54f41440a4c6d136f4da73223f4c05" data-hover-hint="pageHeader" data-hover-hint-id="p6179c83bf0ab6d947b395ac54f41440a4c6d136f4da73223f4c05">
+                                <h1 class="title preserve-whitespace e2e-site-logo-text">橙子作品集</h1>
+                                <p class="description">2018-2019角色动画作品集
+                                    </p>
+
+                            </header>
+                            <div class="page-content js-page-content" data-context="pages" data-identity="id:p6179c83bf0ab6d947b395ac54f41440a4c6d136f4da73223f4c05">
                                 <div id="project-canvas" class="js-project-modules modules content">
                                     <div id="project-modules">
 
+                                        <div class="project-module module image project-module-image js-js-project-module">
 
 
 
 
-                                        <div class="project-module module text project-module-text align- js-project-module e2e-site-project-module-text">
-                                            <div class="rich-text js-text-editable module-text">
-                                                <div style="text-align:left;"><span style="font-family:gmsj; font-style:normal; font-weight:600;"><span style="font-size:60px;"><span style="color:rgb(238, 238, 238); font-family:gmsj; font-style:normal; font-weight:700;">服务项目</span></span><br><br>IDENTITÉ
-                                                    VISUELLE / BRANDING</span><br><span style="font-family:gmsj; font-style:normal; font-weight:300;">- Logotype</span><br><span style="font-family:gmsj; font-style:normal; font-weight:300;">- Branding Personnel | Commercial</span><br>
-                                                    <span
-                                                        style="font-family:gmsj; font-style:normal; font-weight:300;">- Branding de Mariage | Évènement</span><br><br><span style="font-family:gmsj; font-style:normal; font-weight:600;">DESIGN PUBLICITAIRE</span><br><span style="font-family:gmsj; font-style:normal; font-weight:300;">- Magazine | Journal | Impression publicitaire</span><br>
-                                                        <span
-                                                            style="font-family:gmsj; font-style:normal; font-weight:300;">- Annonce en ligne | Campagne de développement</span><br><span style="font-family:gmsj; font-style:normal; font-weight:300;">- Design pour média sociaux</span><br><br><span style="font-family:gmsj; font-style:normal; font-weight:600;">DESIGN D'IMPRESSION ET DE PUBLICATION</span><br>
-                                                            <span
-                                                                style="font-family:gmsj; font-style:normal; font-weight:300;">- Matériel marketing | Cartes d’affaires | Affiche | Brochure</span><br><span style="font-family:gmsj; font-style:normal; font-weight:300;">- Menu | Vêtement | Autocollant | Infographique | Skateboard</span><br>
-                                                                <span
-                                                                    style="font-family:gmsj; font-style:normal; font-weight:300;">- Habillage de véhicule | Affichage | Lettrage</span><br><br><span style="font-family:gmsj; font-style:normal; font-weight:600;">CONCEPTION À LA MAIN</span><br><span style="font-family:gmsj; font-style:normal; font-weight:300;">- Illustration vectoriel et à la main</span><br>
-                                                                    <span
-                                                                        style="font-family:gmsj; font-style:normal; font-weight:300;">- Logo et typographie à la main</span><br><br><span style="font-family:gmsj; font-style:normal; font-weight:600;">SERVICE CLÉ EN MAIN</span><br><span style="font-family:gmsj; font-style:normal; font-weight:300;">Vous manquez de temps pour vous occuper</span><br>
-                                                                        <span
-                                                                            style="font-family:gmsj; font-style:normal; font-weight:300;">de l’impression de vos nouveaux designs?</span><br><span style="font-family:gmsj; font-style:normal; font-weight:300;">Je peux le faire pour vous!</span><br></div>
+                                            <div class="js-lightbox" data-src=""><img src="img/czzpj/1-1.png" width="1280" height="720" alt=""/>
                                             </div>
+
+
                                         </div>
-
-
-
-
-
-                                    </div>
+                                      <div class="project-module module image project-module-image js-js-project-module">
+                                          <div class="js-lightbox" data-src=""><img src="img/czzpj/1-2.png" width="1280" height="720" alt=""/> </div>
+                                        </div>
+                                      <div class="project-module module image project-module-image js-js-project-module">
+                                          <div class="js-lightbox" data-src=""><img src="img/czzpj/1-3.png" width="1280" height="720" alt=""/></div>
+                                        </div>
+                                      <div class="project-module module image project-module-image js-js-project-module">
+                                          <div class="js-lightbox" data-src=""><img src="img/czzpj/1-4.png" width="1280" height="720" alt=""/></div>
+                                        </div>
+                                        <div class="project-module module image project-module-image js-js-project-module">
+                                          <div class="js-lightbox" data-src=""><img src="img/czzpj/1-5.png" width="1280" height="720" alt=""/></div>
+                                        </div>
+                                  </div>
                                 </div>
                             </div>
                         </section>
@@ -711,7 +748,7 @@
             "applicationID": "750147145",
             "transactionName": "ZwZaYkJVDERXUxULCV5Me0NDQA1aGWsmJzJtQxdtS0QDQ14KT0gbbQ==",
             "queueTime": 0,
-            "applicationTime": 20,
+            "applicationTime": 19,
             "atts": "S0FNFApPHxsUUUNYHU0e",
             "errorBeacon": "bam.nr-data.net",
             "agent": ""
@@ -728,7 +765,7 @@
 </script>
 <script type="text/javascript">
     var __config__ = {
-        "page_id": "p5721150b04009a35a2b24ab65a84db547b67d79cfe8d8736dd1f6",
+        "page_id": "p6179c83bf0ab6d947b395ac54f41440a4c6d136f4da73223f4c05",
         "theme": {
             "name": "geometric"
         },
