--- a/index.html
+++ b/index.html
@@ -645,9 +645,7 @@
                     <div class="cover-content-container">
                           <div class="cover-image-wrap">
                             <div class="cover-image">
-                              <div class="cover cover-normal"> <img class="cover__img js-lazy" src="img/1.png" data-src=""
-                                                data-
-                                                data-sizes="(max-width: 540px) 100vw, (max-width: 768px) 50vw, calc(1600px / 4)"> </div>
+                              <div class="cover cover-normal"> <img class="cover__img js-lazy" src="img/1.png" data-src="" data-="" data-sizes="(max-width: 540px) 100vw, (max-width: 768px) 50vw, calc(1600px / 4)"></div>
                             </div>
                           </div>
                           <div class="details-wrap">
