--- a/about.html
+++ b/about.html
@@ -574,7 +574,7 @@
     <link rel="stylesheet" href="/dist/css/main.css" type="text/css" />
     <link rel="stylesheet" href="https://cdn.myportfolio.com/dd382a0eb5937ce9a2eec27e77e54307/c23cf19ba67f48f6c842860b2a390f561651100219.css?h=a4d308611f8a4cb6011182ce9b408fdc" type="text/css" />
     <link rel="canonical" href="https://wnartdesign.com/services" />
-    <title>W橙子动漫 - 关于</title>
+    <title>橙子动漫 - 关于</title>
     <script type="text/javascript" src="//use.typekit.net/ik/2hyP9_jYVTxEKrRyOSCebwd1Yb6uql52SoR3-6R7Fj9fenCffHYEBsJzwD9oFDIDWDqUjDFcFRbDFh9UZAFcFRBRZRgRwcwuwesRZ2IoZ2mKw2MtwcJtwcJ-RbI7OcuoSeNkieZzde8zOcFzdP37O1gkdDJlic88ikolpWgzS1scdhUTdkoRdhXCHKoadcBkies8Sh81dKoRdhXCdW83da4XZcNC-Av0jhNlOYgkdDJlic88ikolpWgzS1scdhUTdkoRdhXCihoyS1sqZWFTZht0jhNlOYiaikoadcBkies8Sh81dKoRdhXKgeilShGKgYZRShX7fbRaPyMMeMI6MKG4fFJuIMMjMkMfH6qJDR9bMg6IJMJ7fbRbFsMMeMj6MKG4fFIVIMMjgkMfH6qJu29bMg64JMJ7fbKzMsMgeMb6MKG4fHXgIMIjgKMfH6qJK3IbMs6YJMHbMp0sotCe.js?cb=3542f9ec304c2dc19fc7fd80dd515314aade8328"
         async onload="
     try {
