--- a/about.html
+++ b/about.html
@@ -628,7 +628,7 @@
                     <div class="nav-container">
                         <nav data-hover-hint="nav">
 							
-                            <div class="gallery-title"><a href="/portfolio" class="index">主页</a></div>
+                            <div class="gallery-title"><a href="/index" class="index">主页</a></div>
                             <div class="page-title">
                                 <a href="/about">关于</a>
                             </div>
