--- a/index.html
+++ b/index.html
@@ -598,10 +598,10 @@
                 <nav data-hover-hint="nav">
                     <div class="gallery-title"><a href="/portfolio" class="index">主页</a></div>
                     <div class="page-title">
-                        <a href="/about">关于</a>
+                        <a href="about">关于</a>
                     </div>
                     <div class="page-title">
-                        <a href="/contact">联系</a>
+                        <a href="contact">联系</a>
                     </div>
                     <div class="social pf-nav-social" data-hover-hint="navSocialIcons"> </div>
                 </nav>
@@ -629,12 +629,12 @@
                     <div class="nav-container">
                         <nav data-hover-hint="nav">
 							
-                            <div class="gallery-title"><a href="/portfolio" class="active">主页</a></div>
+                            <div class="gallery-title"><a href="/portfolio" class="index">主页</a></div>
                             <div class="page-title">
-                                <a href="/about">关于</a>
+                                <a href="about">关于</a>
                             </div>
                             <div class="page-title">
-                                <a href="/contact">联系</a>
+                                <a href="contact">联系</a>
                             </div>
 </nav>
                     </div>
