--- a/czzpj.html
+++ b/czzpj.html
@@ -686,28 +686,26 @@
                             <div class="page-content js-page-content" data-context="pages" data-identity="id:p6179c83bf0ab6d947b395ac54f41440a4c6d136f4da73223f4c05">
                                 <div id="project-canvas" class="js-project-modules modules content">
                                     <div id="project-modules">
-
+                                        <p><video width="50%" autoplay class=""controls="controls" >
+                                                    <source src="video/Showreel.mp4" type="video/mp4">
+                                                  </video></p>
                                         <div class="project-module module image project-module-image js-js-project-module">
-
-
-
-
-                                            <div class="js-lightbox" data-src=""><img src="img/czzpj/1-1.png" width="1280" height="720" alt=""/>
-                                            </div>
+<div class="js-lightbox" data-src=""><img src="img/czzpj/1-1.png" width="870" height="500" alt=""/>
+                      </div>
 
 
                                         </div>
                                       <div class="project-module module image project-module-image js-js-project-module">
-                                          <div class="js-lightbox" data-src=""><img src="img/czzpj/1-2.png" width="1280" height="720" alt=""/> </div>
+                                          <div class="js-lightbox" data-src=""><img src="img/czzpj/1-2.png" width="870" height="500" alt=""/> </div>
                                         </div>
                                       <div class="project-module module image project-module-image js-js-project-module">
-                                          <div class="js-lightbox" data-src=""><img src="img/czzpj/1-3.png" width="1280" height="720" alt=""/></div>
+                                          <div class="js-lightbox" data-src=""><img src="img/czzpj/1-3.png" width="870" height="500" alt=""/></div>
                                         </div>
                                       <div class="project-module module image project-module-image js-js-project-module">
-                                          <div class="js-lightbox" data-src=""><img src="img/czzpj/1-4.png" width="1280" height="720" alt=""/></div>
+                                          <div class="js-lightbox" data-src=""><img src="img/czzpj/1-4.png" width="870" height="500" alt=""/></div>
                                         </div>
                                         <div class="project-module module image project-module-image js-js-project-module">
-                                          <div class="js-lightbox" data-src=""><img src="img/czzpj/1-5.png" width="1280" height="720" alt=""/></div>
+                                          <div class="js-lightbox" data-src=""><img src="img/czzpj/1-5.png" width="870" height="500" alt=""/></div>
                                         </div>
                                   </div>
                                 </div>
