--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@
                 </header>
                 <main>
 					
-                    <section class="project-covers" data-context="page.gallery.covers"> <a class="project-cover js-project-cover-touch hold-space" href="/brule-branding" data-context="pages" data-identity="id:p5739e74ae86dcf0163211ba5aff5064c38b3b532be143b0656f3d" data-hover-hint="galleryPageCover" data-hover-hint-id="p5739e74ae86dcf0163211ba5aff5064c38b3b532be143b0656f3d">
+                    <section class="project-covers" data-context="page.gallery.covers"> <a class="project-cover js-project-cover-touch hold-space" href="/czzpj" data-context="pages" data-identity="id:p5739e74ae86dcf0163211ba5aff5064c38b3b532be143b0656f3d" data-hover-hint="galleryPageCover" data-hover-hint-id="p5739e74ae86dcf0163211ba5aff5064c38b3b532be143b0656f3d">
                     <div class="cover-content-container">
                           <div class="cover-image-wrap">
                             <div class="cover-image">
