--- a/czzpj.html
+++ b/czzpj.html
@@ -664,7 +664,7 @@
                     <div class="nav-container">
                         <nav data-hover-hint="nav">
 							
-                            <div class="gallery-title"><a href="/portfolio" class="active">主页</a></div>
+                            <div class="gallery-title"><a href="/portfolio" class="index">主页</a></div>
                             <div class="page-title">
                                 <a href="/about">关于</a>
                             </div>
@@ -686,9 +686,9 @@
                             <div class="page-content js-page-content" data-context="pages" data-identity="id:p6179c83bf0ab6d947b395ac54f41440a4c6d136f4da73223f4c05">
                                 <div id="project-canvas" class="js-project-modules modules content">
                                     <div id="project-modules">
-                                        <p><video width="50%" autoplay class=""controls="controls" >
+                                       <video width="100%" autoplay class=""controls="controls" >
                                                     <source src="video/Showreel.mp4" type="video/mp4">
-                                                  </video></p>
+                                                  </video>
                                         <div class="project-module module image project-module-image js-js-project-module">
 <div class="js-lightbox" data-src=""><img src="img/czzpj/1-1.png" width="870" height="500" alt=""/>
                       </div>
