--- a/index.html
+++ b/index.html
@@ -570,12 +570,11 @@
     <meta property="og:title" content="WN ART &amp; DESIGN" />
     <meta property="og:description" content="Illustration x Design graphique" />
     <meta property="og:image" content="https://cdn.myportfolio.com/dd382a0eb5937ce9a2eec27e77e54307/2e5b11d3-3591-4f46-8c30-f0e516c84d18_rwc_7x0x2553x2000x2553.jpg?h=4310e48a93f90bced235ded3de99a0c4" />
-    <link rel="icon" href="https://cdn.myportfolio.com/dd382a0eb5937ce9a2eec27e77e54307/444d2d94-6a9b-4418-b53f-536c92b5cdae_carw_1x1x32.png?h=7c0f715d771cab3c585146fdbdc8c942" />
+    <link rel="icon" href="img/logo_tb.png" />
     <link rel="apple-touch-icon" href="https://cdn.myportfolio.com/dd382a0eb5937ce9a2eec27e77e54307/699fe73e-62ac-41df-a697-62a6ceb15b76_carw_1x1x180.png?h=de4622e431b2c1c81d53eb709134813d" />
     <link rel="stylesheet" href="/dist/css/main.css" type="text/css" />
     <link rel="stylesheet" href="https://cdn.myportfolio.com/dd382a0eb5937ce9a2eec27e77e54307/0d16956d9d060eb231766f8d3b772fa41651100219.css?h=d2f08d805b4c7033bed2f7a60c166d29" type="text/css" />
-    <link rel="canonical" href="https://wnartdesign.com/portfolio" />
-    <title>橙子动漫</title>
+<title>橙子动漫</title>
     <script type="text/javascript" src="//use.typekit.net/ik/2hyP9_jYVTxEKrRyOSCebwd1Yb6uql52SoR3-6R7Fj9fenCffHYEBsJzwD9oFDIDWDqUjDFcFRbDFh9UZAFcFRBRZRgRwcwuwesRZ2IoZ2mKw2MtwcJtwcJ-RbI7OcuoSeNkieZzde8zOcFzdP37O1gkdDJlic88ikolpWgzS1scdhUTdkoRdhXCHKoadcBkies8Sh81dKoRdhXCdW83da4XZcNC-Av0jhNlOYgkdDJlic88ikolpWgzS1scdhUTdkoRdhXCihoyS1sqZWFTZht0jhNlOYiaikoadcBkies8Sh81dKoRdhXKgeilShGKgYZRShX7fbRaPyMMeMI6MKG4fFJuIMMjMkMfH6qJDR9bMg6IJMJ7fbRbFsMMeMj6MKG4fFIVIMMjgkMfH6qJu29bMg64JMJ7fbKzMsMgeMb6MKG4fHXgIMIjgKMfH6qJK3IbMs6YJMHbMp0sotCe.js?cb=3542f9ec304c2dc19fc7fd80dd515314aade8328"
         async onload="
     try {
@@ -651,7 +650,7 @@
                           <div class="details-wrap">
                             <div class="details">
                               <div class="details-inner">
-                                <div class="title preserve-whitespace">橙子作品集</div>
+                                <div class="title preserve-whitespace">橙子动漫 | 作品集</div>
                               </div>
                             </div>
                           </div>
@@ -668,7 +667,7 @@
                           <div class="details-wrap">
                             <div class="details">
                               <div class="details-inner">
-                                <div class="title preserve-whitespace">MG动画形象片</div>
+                                <div class="title preserve-whitespace">橙子动漫 | 橙子形象片</div>
                               </div>
                             </div>
                           </div>
@@ -691,7 +690,7 @@
                                 <div class="details-wrap">
                                     <div class="details">
                                         <div class="details-inner">
-                                            <div class="title preserve-whitespace">抗击冠状病毒</div>
+                                            <div class="title preserve-whitespace">橙子动漫 | 抗击冠状病毒</div>
                                         </div>
                                     </div>
                                 </div>
@@ -712,7 +711,7 @@
                                 <div class="details-wrap">
                                     <div class="details">
                                         <div class="details-inner">
-                                            <div class="title preserve-whitespace">角色游戏动作集</div>
+                                            <div class="title preserve-whitespace">橙子动漫 | 角色游戏动作集</div>
                                         </div>
                                     </div>
                                 </div>
@@ -733,7 +732,7 @@
                                 <div class="details-wrap">
                                     <div class="details">
                                         <div class="details-inner">
-                                            <div class="title preserve-whitespace">企业招聘案例</div>
+                                            <div class="title preserve-whitespace">企业招聘 | 在家做ESL导师</div>
                                         </div>
                                     </div>
                                 </div>
@@ -754,7 +753,7 @@
                                 <div class="details-wrap">
                                     <div class="details">
                                         <div class="details-inner">
-                                            <div class="title preserve-whitespace">在家办公的一天</div>
+                                            <div class="title preserve-whitespace">老师故事 | 我在公司的一天</div>
                                         </div>
                                     </div>
                                 </div>
@@ -775,7 +774,7 @@
                                 <div class="details-wrap">
                                     <div class="details">
                                         <div class="details-inner">
-                                            <div class="title preserve-whitespace">专业老师基本要求</div>
+                                            <div class="title preserve-whitespace">入职培训 | 基本要求</div>
                                         </div>
                                     </div>
                                 </div>
@@ -796,7 +795,7 @@
                                 <div class="details-wrap">
                                     <div class="details">
                                         <div class="details-inner">
-                                            <div class="title preserve-whitespace">双十一活动</div>
+                                            <div class="title preserve-whitespace">活动促销 | 双十一</div>
                                         </div>
                                     </div>
                                 </div>
@@ -817,7 +816,7 @@
                                 <div class="details-wrap">
                                     <div class="details">
                                         <div class="details-inner">
-                                            <div class="title preserve-whitespace">部门职责介绍</div>
+                                            <div class="title preserve-whitespace">企业部门 | 职责介绍</div>
                                         </div>
                                     </div>
                                 </div>
@@ -839,7 +838,7 @@
                                 <div class="details-wrap">
                                     <div class="details">
                                         <div class="details-inner">
-                                            <div class="title preserve-whitespace">成为在线英语导师</div>
+                                            <div class="title preserve-whitespace">资格证书 | 成为在线英语老师</div>
                                         </div>
                                     </div>
                                 </div>
@@ -860,7 +859,7 @@
                                 <div class="details-wrap">
                                     <div class="details">
                                         <div class="details-inner">
-                                            <div class="title preserve-whitespace">新老师培训</div>
+                                            <div class="title preserve-whitespace">工作介绍 | 老师入职培训</div>
                                         </div>
                                     </div>
                                 </div>
@@ -878,7 +877,7 @@
                         <div class="details-wrap">
                           <div class="details">
                             <div class="details-inner">
-                              <div class="title preserve-whitespace">母爱</div>
+                              <div class="title preserve-whitespace">老师故事 | 单身母亲的爱</div>
                             </div>
                           </div>
                         </div>
