--- a/czzpj.html
+++ b/czzpj.html
@@ -648,7 +648,7 @@
                     <div class="page-container" data-context="page.page.container" data-hover-hint="pageContainer">
                         <section class="page standard-modules">
                             <header class="page-header content" data-context="pages" data-identity="id:p6179c83bf0ab6d947b395ac54f41440a4c6d136f4da73223f4c05" data-hover-hint="pageHeader" data-hover-hint-id="p6179c83bf0ab6d947b395ac54f41440a4c6d136f4da73223f4c05">
-                                <h1 class="title preserve-whitespace e2e-site-logo-text">橙子作品集</h1>
+                                <h1 class="title preserve-whitespace e2e-site-logo-text">橙子动漫 | 作品集</h1>
                                 <p class="description">2018-2019角色动画作品集
                                     </p>
 
