--- a/contact.html
+++ b/contact.html
@@ -570,7 +570,7 @@
     <meta property="og:title" content="橙子动漫 - 联系" />
     <meta property="og:description" content="Illustration x Design graphique" />
     <meta property="og:image" content="https://cdn.myportfolio.com/dd382a0eb5937ce9a2eec27e77e54307/b6b52de0-0285-4edf-91ce-a4aa163a0564_rw_600.png?h=f4425920f0ddbf4b11690325c25ad6f1" />
-    <link rel="icon" href="https://cdn.myportfolio.com/dd382a0eb5937ce9a2eec27e77e54307/444d2d94-6a9b-4418-b53f-536c92b5cdae_carw_1x1x32.png?h=7c0f715d771cab3c585146fdbdc8c942" />
+    <link rel="icon" href="img/logo_tb.png" />
     <link rel="apple-touch-icon" href="https://cdn.myportfolio.com/dd382a0eb5937ce9a2eec27e77e54307/699fe73e-62ac-41df-a697-62a6ceb15b76_carw_1x1x180.png?h=de4622e431b2c1c81d53eb709134813d" />
     <link rel="stylesheet" href="/dist/css/main.css" type="text/css" />
     <link rel="stylesheet" href="https://cdn.myportfolio.com/dd382a0eb5937ce9a2eec27e77e54307/0a84327519b94673ac4d5e59bbbcf9291651100219.css?h=cde6068df83240e51746001f220e9daf" type="text/css" />
