--- a/about.html
+++ b/about.html
@@ -569,7 +569,7 @@
     <meta name="twitter:site" content="@AdobePortfolio" />
     <meta property="og:title" content="橙子动漫 - 关于" />
     <meta property="og:description" content="Illustration x Design graphique" />
-    <link rel="icon" href="https://cdn.myportfolio.com/dd382a0eb5937ce9a2eec27e77e54307/444d2d94-6a9b-4418-b53f-536c92b5cdae_carw_1x1x32.png?h=7c0f715d771cab3c585146fdbdc8c942" />
+    <link rel="icon" href="img/logo_tb.png" />
     <link rel="apple-touch-icon" href="https://cdn.myportfolio.com/dd382a0eb5937ce9a2eec27e77e54307/699fe73e-62ac-41df-a697-62a6ceb15b76_carw_1x1x180.png?h=de4622e431b2c1c81d53eb709134813d" />
     <link rel="stylesheet" href="/dist/css/main.css" type="text/css" />
     <link rel="stylesheet" href="https://cdn.myportfolio.com/dd382a0eb5937ce9a2eec27e77e54307/c23cf19ba67f48f6c842860b2a390f561651100219.css?h=a4d308611f8a4cb6011182ce9b408fdc" type="text/css" />
