--- a/czzpj.html
+++ b/czzpj.html
@@ -572,7 +572,7 @@
     <meta property="og:description" content="Nouvelle identité visuelle pour Précision MV qui devient Ironhold. Un atelier de fabrication de guidons et pièces de moto. Dénomination, conception de l'image de marque, site web, photos, vidéos et coordination du projet. "
     />
     <meta property="og:image" content="https://cdn.myportfolio.com/dd382a0eb5937ce9a2eec27e77e54307/489e1d2d-6451-4f27-bcc9-c9dc67db36ab_car_202x158.jpg?h=10376a21a6297875c27828548ebcfe2a" />
-    <link rel="icon" href="https://cdn.myportfolio.com/dd382a0eb5937ce9a2eec27e77e54307/444d2d94-6a9b-4418-b53f-536c92b5cdae_carw_1x1x32.png?h=7c0f715d771cab3c585146fdbdc8c942" />
+    <link rel="icon" href="img/logo_tb.png" />
     <link rel="apple-touch-icon" href="https://cdn.myportfolio.com/dd382a0eb5937ce9a2eec27e77e54307/699fe73e-62ac-41df-a697-62a6ceb15b76_carw_1x1x180.png?h=de4622e431b2c1c81d53eb709134813d" />
     <link rel="stylesheet" href="/dist/css/main.css" type="text/css" />
     <link rel="stylesheet" href="https://cdn.myportfolio.com/dd382a0eb5937ce9a2eec27e77e54307/717829a48b5fad64747b7bf2f577ae731651100219.css?h=10dc8ebc953bcca66f4d94461b39da64" type="text/css" />
