--- a/about.html
+++ b/about.html
@@ -570,7 +570,7 @@
     <meta property="og:title" content="橙子动漫 - 关于" />
     <meta property="og:description" content="Illustration x Design graphique" />
     <link rel="icon" href="img/logo_tb.png" />
-    <link rel="apple-touch-icon" href="https://cdn.myportfolio.com/dd382a0eb5937ce9a2eec27e77e54307/699fe73e-62ac-41df-a697-62a6ceb15b76_carw_1x1x180.png?h=de4622e431b2c1c81d53eb709134813d" />
+    <link rel="apple-touch-icon" href="img/logo_tb.png" />
     <link rel="stylesheet" href="/dist/css/main.css" type="text/css" />
     <link rel="stylesheet" href="https://cdn.myportfolio.com/dd382a0eb5937ce9a2eec27e77e54307/c23cf19ba67f48f6c842860b2a390f561651100219.css?h=a4d308611f8a4cb6011182ce9b408fdc" type="text/css" />
     <link rel="canonical" href="https://wnartdesign.com/services" />
